--- a/index.html
+++ b/index.html
@@ -7,7 +7,28 @@
   </head>
 
   <body>
-    <h1>test</h1>
+
+    <!-- "Intro" -->
+    <h1>Discover hidden places in the world around you</h1>
+    <p><a href="https://mhtri2pmh6f7stj6eg7glomuan423o9dea1na67um3on98r75d70.codecademy.cloud/#">Download Excursion (Coming soon!)</a></p>
+    <video autoplay loop muted>
+      <source src="resources/videos/excursion.mp4" type="video/mp4">
+    </video>
+
+    <!-- "Body" -->
+    <h2>Your personal travel guide.</h2>
+    <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
+    <p>
+      <img src="resources/images/camp.jpg">
+    </p>
+
+    <!-- "Footer" -->
+    <p>
+      <img src="resources/images/phone.png">
+    </p>
+    <h2>Coming Soon for iPhone and Android</h2>
+    <p><a href="https://mhtri2pmh6f7stj6eg7glomuan423o9dea1na67um3on98r75d70.codecademy.cloud/#">Download Excursion (Coming soon!)</a></p>
+    
   </body>
 
 
